syntax = "proto3";
package manifest;

message GetManifestRequest {
    // get manifest given manifest id
    string id = 1;
}

message GetManifestResponse {
    // latest manifest version
    uint64 version = 1;
    // manifest binaries
    bytes buffer = 2;
}

message PutManifestRequest {
    // manifest id
    optional string id = 1;
    // manifest binaries
    bytes buffer = 2;
}

message PutManifestResponse {
    // manifest id
    string id = 1;
    // latest manifest version
    uint64 version = 2;
}

service Manifest {
    rpc GetManifest(GetManifestRequest) returns (GetManifestResponse) {}
    rpc PutManifest(PutManifestRequest) returns (PutManifestResponse) {}
}
